Moved form section to a web component

--- a/dicoding-proyek-awal/index.html
+++ b/dicoding-proyek-awal/index.html
@@ -15,7 +15,7 @@
     <!--CONTAINER-->
     <div class="container">
         <div id="formContainer" class="form-container">
-            <form action="#">
+            <!-- <form action="#">
                 <div class="form-title">
                     <input id="title" name="title" type="text" placeholder="Title" required />
                 </div>
@@ -23,7 +23,8 @@
                     <input id="body" name="body" type="textarea" placeholder="What's on your mind?" required />
                 </div>
                 <button type="submit">Submit</button>
-            </form>
+            </form> -->
+            <form-main></form-main>
         </div>
         <div id="noteListContainer" class="note-list-container">
             <note-list></note-list>
