--- a/dicoding-proyek-awal/index.html
+++ b/dicoding-proyek-awal/index.html
@@ -39,7 +39,7 @@
                     />
                     <p id="bodyValidation" class="validation-message" aria-live="polite"></p>
                 </div>
-                <button type="submit">Submit</button>
+                <button id="submitNote" type="submit">Submit</button>
             </form>
         </div>
         <div id="noteListContainer" class="note-list-container">
